# agoc

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.electron  README.md  agoc.cabal  build-and-copy.sh  build-electron.sh  cabal.project  cabal.project.local  flake.nix  generate-jsffi.sh  locally.sh  package.json  playwright.config.ts  test-e2e.sh  test-hs.sh  test-locally.sh  test.cabal
.github/workflows/: pixijs-ffi.yml  static.yml
app/: App.hs
electron/: main.js  preload.js
pixijs-ffi/: .gitignore  CHANGELOG.md  LICENSE  README.md  build-pixijs-ffi-test.sh  pixijs-ffi.cabal  playwright.config.ts  vendor-deps.sh
pixijs-ffi/public/test/: pixijs-ffi-test.html
pixijs-ffi/src/Graphics/: PixiJS.hs
pixijs-ffi/src/Graphics/PixiJS/: Application.hs  Assets.hs  Display.hs  Events.hs  Filters.hs  Gamepad.hs  Graphics.hs  Interop.hs  Math.hs  Text.hs  Texture.hs  Ticker.hs  Types.hs
pixijs-ffi/test/: Main.hs  pixijs-ffi.spec.ts
public/: index.html
scripts/: vendor-dependencies.sh
src/: Histogram.hs  Lib.hs
src/Game/: Logic.hs  State.hs
test/: GameLogicSpec.hs  design-screenshots.spec.ts  dice-animation.spec.ts  dice-mechanics.spec.ts  fixtures.ts  menu.spec.ts  sample-button.spec.ts  state-ffi.spec.ts  test-helpers.ts
