cabal-version:      3.14
name:               agoc
version:            0.1.0.0
synopsis:           A Game of Chance

-- A longer description of the package.
description:
    This is a game of chance implemented in Haskell and compiled to WebAssembly using the GHC WASM backend.
-- The license under which the package is released.
license:            MIT

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Matthias Pall Gissurarson

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:        mpg@mpg.is

-- A copyright notice.
-- copyright:
category:           Development
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
extra-source-files:
    README.md

homepage:       https://git.tharkun.se/agoc

source-repository head
  type:     git
  location: https://github.com/Tharkun/agoc.git

common warnings
    ghc-options: -Wall

library
    hs-source-dirs:   src
    build-depends:
        base,
        ghc-experimental,
        pixijs-ffi
    default-language: GHC2021
    exposed-modules:
        Lib


executable agoc
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          App.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base,
        agoc,
        pixijs-ffi,
        splitmix,
        splitmix-distributions,
        containers,
        aeson,
        microlens,
        microlens-aeson,
        bytestring,
        ghc-experimental
    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: GHC2021

    -- GHC options for reactor module: disable Haskell main, use reactor model, export main symbol
    ghc-options: -no-hs-main -optl-mexec-model=reactor -optl-Wl,--export=main
